[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"
Flask = "^2.3.2"
replit = "^3.3.0"
"discord.py" = "2.3.2"
google-generativeai = "^0.4.1"
xds-protos = "^1.62.1"
gemini-python = "^0.2.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"